# yandex-maps-reviews-parser

./: README.md  main.py  pyproject.toml
yandex_maps_reviews_parser/: Review.py  YandexMapsReviewsParser.py  consts.py  main.py
